fix nawras cv, navigation opacity, about font sizes on mobile

--- a/src/styles/components/Collapsable.scss
+++ b/src/styles/components/Collapsable.scss
@@ -48,12 +48,17 @@
 
 @media screen and (max-width: 480px) {
   .nawras-cv-wrapper {
+    width: 95%;
     .nawras-cv {
+      .vita {
+        font-size: $medium;
+      }
       .row {
         //   width: 100%;
         //   height: 10%;
-        font-size: 14px;
+        font-size: $small;
         display: flex;
+        flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
         list-style: none;
@@ -63,12 +68,15 @@
           // height: 100%;
           // background-color: red;
           list-style: none;
+          margin-bottom: 6px;
+          font-size: $small;
         }
         .col2 {
-          width: 75%;
+          width: 100%;
           // height: 100%;
           // background-color: yellow;
           list-style: none;
+          font-size: $x-small;
         }
       }
     }
