--- a/src/styles/components/NurseCard.scss
+++ b/src/styles/components/NurseCard.scss
@@ -52,7 +52,7 @@
         //   background-color: blue;
         height: 50%;
         width: 100%;
-        font-size: $x-large;
+        font-size: $large;
         display: flex;
         align-items: center;
         justify-content: center;
