--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -185,6 +185,7 @@
     &__background {
       top: 28px;
       right: 16px;
+      opacity: 0.95;
     }
     &__nav {
       height: calc(100svh - 90px);
